# Telecom-Churn-Prediction-system

./: .gitignore  LICENSE  NOTES.md  README.md  create_template.py  main.py  pyproject.toml  requirements.txt
churn_prediction/notebooks/: 01_data_understanding.ipynb  02_exploratory_data_analysis.ipynb  03_feature_engineering_and_modeling.ipynb  04_model_finetuning.ipynb
configs/: config.yaml
configs/model/: baseline.yaml
notebooks/: 01_exploration.ipynb  02_feature_engineering_and_training.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
src/: utils.py
src/churn_prediction/: features.py  utils.py
src/churn_prediction/train/: data_loader.py  model.py  process.py  split_data.py
tests/: logging_test.py
utils/: exception.py  logger.py
