[project]
name = "telecom-churn-prediction-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.43.42",
    "botocore>=1.43.42",
    "catboost>=1.2.10",
    "dill>=0.4.1",
    "evidently==0.2.8",
    "fastapi>=0.125.0",
    "from-root>=1.3.0",
    "imblearn>=0.0",
    "ipykernel>=7.3.0",
    "jinja2>=3.1.6",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "mypy-boto3-s3>=1.43.31",
    "neuro-mf>=0.0.5",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "plotly>=6.8.0",
    "pymongo>=4.17.0",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "uvicorn>=0.51.0",
    "xgboost>=3.2.0",
]
